Improvements on the already existing functionality.
